--- a/Sample/appsettings.json
+++ b/Sample/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-7QC7AIQ\\SQLEXPRESS; Database=My_Project;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=Your_Connection; Database=My_Project;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "AllowedHosts": "*",
   "JWT": {
